# mydb

./: .gitignore  Cargo.toml  README.md
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/macros/src/derives/: getters.rs  mod.rs  setters.rs  utils.rs
crates/macros/src/derives/entity/: getters.rs  index.rs  mod.rs  setters.rs
crates/sqlx/: Cargo.toml
crates/sqlx/src/: base_entity.rs  base_mapper.rs  base_service.rs  lib.rs
crates/sqlx/src/conditions/: mod.rs  pagination.rs  query.rs
crates/sqlx/src/utils/: transform.rs
