[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.2"
authors = ["swift_li <theswiftlibox@gmail.com>"]
description = """
A description of your package
"""
license = "MIT OR Apache-2.0"
rust-version = "1.57.0"
edition = "2021"

[workspace.dependencies]
mydb_macros = { version = "0.0.1", path = "crates/macros", default-features = false }
mydb-sqlx = { version = "0.0.1", path = "crates/sqlx", default-features = false }

syn = "2.0.68"
quote = "1.0.36"
proc-macro2 = "1.0.86"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7.1"
chrono = "0.4"
mysql = "20.0.2"
sqlx = { version = "0.5.13" , features = ["mysql", "chrono", "uuid", "macros", "runtime-tokio-native-tls"] }
sqlx-core = "0.5.13"
