[package]
name = "mydb_macros"
version = "0.0.2"
authors = ["swift_li <theswiftlibox@gmail.com>"]
description = "mydb proc macros"
license = "MIT OR Apache-2.0"
rust-version = "1.79.0"
edition = "2021"

[lib]
name = "mydb_macros"
proc-macro = true

[dependencies.proc-macro2]
version = "1.0.86"
default-features = false

[dependencies.quote]
version = "1.0.36"
default-features = false

[dependencies.syn]
version = "2.0.68"
features = [
    "parsing",
    "proc-macro",
    "derive",
    "printing",
]
default-features = false

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7.1"
chrono = "0.4"

