[package]
name = "mydb-sqlx"
version = "0.0.2"
authors = ["swift_li <theswiftlibox@gmail.com>"]
description = "mydb sqlx"
license = "MIT OR Apache-2.0"
rust-version = "1.79.0"
edition = "2021"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7.1"
mysql = "20.0.2"
sqlx = { version = "0.5.13" , features = ["mysql", "chrono", "uuid", "macros", "runtime-tokio-native-tls"] }
sqlx-core = "0.5.13"
